Fix PdfListParser to take into account ending quotes
Unit tests included